# programmer

./: .gitignore  Cargo.toml  PROGRAMMER.md  README.md  deny.toml  todo.md
.github/workflows/: release.yml
.programmer/: diagnostics.toml
src/: Loop.rs  app.rs  cancel.rs  classifier.rs  clipboard.rs  consts.rs  conversation.rs  main.rs  prompts.rs  terminal.rs
src/app/: commands.rs  diagnostics.rs  events.rs  helpers.rs  mod.rs  session.rs  stream.rs  surface.rs  tools.rs
src/app/events/: keys.rs  mod.rs  mouse.rs
src/classifier/: llm.rs  mod.rs
src/commands/: mod.rs
src/config/: mod.rs  programmer_config.rs
src/diagnostics/: lsp.rs  mod.rs  parse.rs  profile.rs  runner.rs
src/engine/: classify.rs  mod.rs  request.rs  stream.rs  surface.rs  tools.rs
src/mcp/: client.rs  console.rs  http_client.rs  http_server.rs  mod.rs  server.rs  types.rs
src/providers/: mod.rs
src/response/: message_item.rs  mod.rs  partial_response.rs  response_finish_reason.rs
src/runner/: classify.rs  hooks.rs  mod.rs  request.rs  stream.rs  surface.rs  tools.rs
src/session/: mod.rs
src/skills/: mod.rs  skill.rs
src/tasks/: mod.rs
src/todos/: mod.rs
src/tools/: ask_user.rs  blob.rs  command.rs  configure_diagnostics.rs  diagnostics.rs  edit_file.rs  fetch.rs  grep.rs  mcp_bridge.rs  mod.rs  provider.rs  read_file.rs  task.rs  todo.rs  write_file.rs
src/ui/: app.rs  event.rs  markdown_code_block.rs  markdown_theme.rs  mod.rs  text.rs  tool_details.rs  ui.rs
src/ui/components/: conversation_panel.rs  input_panel.rs  logo.rs  mcp_panel.rs  mod.rs  panel_search.rs  provider_panel.rs  response_panel.rs
src/ui/components/completion_popup/: mod.rs  ui.rs
src/ui/components/conversation_panel/: conversation_panel.rs  mod.rs  ui.rs
src/ui/components/footer/: footer.rs  mod.rs  ui.rs
src/ui/components/input_panel/: input_panel.rs  mod.rs  ui.rs
src/ui/components/logo/: logo.rs  mod.rs  ui.rs
src/ui/components/mcp_panel/: mod.rs
src/ui/components/messages/: assistant_message.rs  error_message.rs  info_message.rs  mod.rs  pending_message.rs  tool_result.rs  usage_message.rs  user_message.rs  warning_message.rs  welcome_message.rs
(+17 files in other folders)
