[package]
name = "programmer"
version = "0.1.0"
description = "a programmer"
authors = ["huangdihd <hd20100104@163.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui = "0.30.2"
ratatui-widgets = { version = "0.3.0", features = ["unstable-rendered-line-info"] }
tokio = { version = "1.52.3", features = ["full"] }
color-eyre = "0.6.5"
async-openai = { version = "0.41.1", features = ["responses"] }
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.25"
ratatui-textarea = "0.9.2"
dirs = "6.0.0"
toml = "1.1.2+spec-1.1.0"
tui-scrollview = "0.6.7"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
